# Charts

./: AAPL_since_2024.csv  CLAUDE.md  Dockerfile  README.md  README2.md  apple.py  download_smic.py  gemini.md  generate_smic2.py  gold_vs_sp500_data.csv  index.html  index_vergleich.md  index_vergleich_tmp.html  main.py  pdf_export.py  plot_gold_sp500_corr.py  plot_smic.py  proxy.py  pyproject.toml  requirements.txt  server.py  smi_total_return_2000_2024.csv  smic.py  smic2.py  währungs.md
assets/: styles.css
