[project]
name = "charts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "yfinance>=0.2.66",
    "pandas>=2.0.0",
    "dash>=2.14.0",
    "plotly>=5.18.0",
    "ipython>=9.7.0",
]
